fix minecart equation bar spacing

--- a/src/app/integer-platform/integer-platform.component.css
+++ b/src/app/integer-platform/integer-platform.component.css
@@ -1,7 +1,6 @@
 body {
     display : grid;
-    grid-gap : 10px;
-    grid-template-columns: 0px 0px 0px 0px;
+    grid-template-columns: 0 0 0 0 ;
 }
 
 .main {
